--- a/model_evaluation.ipynb
+++ b/model_evaluation.ipynb
@@ -491,21 +491,669 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Given this dataset, use pandas to create a baseline model (i.e. a model that just predicts the most common class) and answer the following questions:\n",
+    "## Given this dataset, use pandas to create a baseline model (i.e. a model that just predicts the most common class) and answer the following questions:\n",
     "\n",
-    "- A. In terms of accuracy, how do the various models compare to the baseline model? Are any of the models better than the baseline?\n",
-    "\n",
-    "- B. Suppose you are working on a team that solely deals with dog pictures. Which of these models would you recomend for Phase I? For Phase II?\n",
-    "\n",
-    "- C. Suppose you are working on a team that solely deals with cat pictures. Which of these models would you recomend for Phase I? For Phase II?"
+    "- A. In terms of accuracy, how do the various models compare to the baseline model? Are any of the models better than the baseline?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dog    3254\n",
+       "cat    1746\n",
+       "Name: actual, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Actual\n",
+    "df.actual.value_counts()\n",
+    "accuracy = df.actual.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   model accuracy: 100.00%\n",
+      "baseline accuracy: 65.08%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Baseline Model\n",
+    "\n",
+    "df.actual.value_counts()\n",
+    "\n",
+    "df['baseline_prediction'] = 'dog'\n",
+    "\n",
+    "model_accuracy = (df.actual == df.actual).mean()\n",
+    "baseline_accuracy = (df.baseline_prediction == df.actual).mean()\n",
+    "\n",
+    "print(f'   model accuracy: {model_accuracy:.2%}')\n",
+    "print(f'baseline accuracy: {baseline_accuracy:.2%}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MODEL ONE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   model accuracy: 80.74%\n",
+      "baseline accuracy: 65.08%\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Model 1\n",
+    "df.model1.value_counts()\n",
+    "\n",
+    "df['baseline_prediction'] = 'dog'\n",
+    "\n",
+    "model_accuracy = (df.model1 == df.actual).mean()\n",
+    "baseline_accuracy = (df.baseline_prediction == df.actual).mean()\n",
+    "\n",
+    "print(f'   model accuracy: {model_accuracy:.2%}')\n",
+    "print(f'baseline accuracy: {baseline_accuracy:.2%}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8074"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Model 1 Accuracy Score\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "y_pred = df.model1\n",
+    "y_true = df.actual\n",
+    "accuracy_score(y_true, y_pred)\n",
+    "\n",
+    "accuracy_score(y_true, y_pred)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.7898980051430666, 0.8074, 0.8200959550792857)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Model 1 Precision Score\n",
+    "\n",
+    "from sklearn.metrics import precision_score\n",
+    "y_pred = df.model1\n",
+    "y_true = df.actual\n",
+    "# provides a range of values\n",
+    "precision_score(y_true, y_pred, average='macro'), precision_score(y_true, y_pred, average='micro'), precision_score(y_true, y_pred, average='weighted')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.8091623596933477, 0.8074, 0.8074)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Model 1 Recall Score\n",
+    "\n",
+    "from sklearn.metrics import recall_score\n",
+    "y_pred = df.model1\n",
+    "y_true = df.actual\n",
+    "recall_score(y_true, y_pred, average='macro'), recall_score(y_true, y_pred, average='micro'), recall_score(y_true, y_pred, average='weighted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      actual       0.69      0.82      0.75      1746\n",
+      "      model1       0.89      0.80      0.84      3254\n",
+      "\n",
+      "    accuracy                           0.81      5000\n",
+      "   macro avg       0.79      0.81      0.80      5000\n",
+      "weighted avg       0.82      0.81      0.81      5000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Model 1 Classification Report\n",
+    "\n",
+    "from sklearn.metrics import classification_report\n",
+    "y_pred = df.model1\n",
+    "y_true = df.actual\n",
+    "target_names = ['actual', 'model1']\n",
+    "print(classification_report(y_true, y_pred, target_names=target_names))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MODEL TWO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   model accuracy: 63.04%\n",
+      "baseline accuracy: 65.08%\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Model 2\n",
+    "df.model2.value_counts()\n",
+    "\n",
+    "df['baseline_prediction'] = 'dog'\n",
+    "\n",
+    "model_accuracy = (df.model2 == df.actual).mean()\n",
+    "baseline_accuracy = (df.baseline_prediction == df.actual).mean()\n",
+    "\n",
+    "print(f'   model accuracy: {model_accuracy:.2%}')\n",
+    "print(f'baseline accuracy: {baseline_accuracy:.2%}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6304"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Model 2 Accuracy Score\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "y_pred = df.model2\n",
+    "y_true = df.actual\n",
+    "accuracy_score(y_true, y_pred)\n",
+    "\n",
+    "accuracy_score(y_true, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.6886493880609905, 0.6304, 0.7503348355300732)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Model 2 Precision Score\n",
+    "\n",
+    "from sklearn.metrics import precision_score\n",
+    "y_pred = df.model2\n",
+    "y_true = df.actual\n",
+    "# provides a range of values\n",
+    "precision_score(y_true, y_pred, average='macro'), precision_score(y_true, y_pred, average='micro'), precision_score(y_true, y_pred, average='weighted')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.6906938398488845, 0.6304, 0.6304)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Model 2 Recall Score\n",
+    "\n",
+    "from sklearn.metrics import recall_score\n",
+    "y_pred = df.model2\n",
+    "y_true = df.actual\n",
+    "recall_score(y_true, y_pred, average='macro'), recall_score(y_true, y_pred, average='micro'), recall_score(y_true, y_pred, average='weighted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      actual       0.48      0.89      0.63      1746\n",
+      "      model2       0.89      0.49      0.63      3254\n",
+      "\n",
+      "    accuracy                           0.63      5000\n",
+      "   macro avg       0.69      0.69      0.63      5000\n",
+      "weighted avg       0.75      0.63      0.63      5000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Model 2 Classification Report\n",
+    "\n",
+    "from sklearn.metrics import classification_report\n",
+    "y_pred = df.model2\n",
+    "y_true = df.actual\n",
+    "target_names = ['actual', 'model2']\n",
+    "print(classification_report(y_true, y_pred, target_names=target_names))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MODEL THREE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   model accuracy: 50.96%\n",
+      "baseline accuracy: 65.08%\n"
+     ]
+    }
+   ],
+   "source": [
+    "#model 3\n",
+    "df.model3.value_counts()\n",
+    "\n",
+    "df['baseline_prediction'] = 'dog'\n",
+    "\n",
+    "model_accuracy = (df.model3 == df.actual).mean()\n",
+    "baseline_accuracy = (df.baseline_prediction == df.actual).mean()\n",
+    "\n",
+    "print(f'   model accuracy: {model_accuracy:.2%}')\n",
+    "print(f'baseline accuracy: {baseline_accuracy:.2%}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5096"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Model 3 Accuracy Score\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "y_pred = df.model3\n",
+    "y_true = df.actual\n",
+    "accuracy_score(y_true, y_pred)\n",
+    "\n",
+    "accuracy_score(y_true, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.5091175333635416, 0.5096, 0.5545900138497418)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Model 3 Precision Score\n",
+    "\n",
+    "from sklearn.metrics import precision_score\n",
+    "y_pred = df.model3\n",
+    "y_true = df.actual\n",
+    "# provides a range of values\n",
+    "precision_score(y_true, y_pred, average='macro'), precision_score(y_true, y_pred, average='micro'), precision_score(y_true, y_pred, average='weighted')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.5100297739111823, 0.5096, 0.5095999999999999)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Model 3 Recall Score\n",
+    "\n",
+    "from sklearn.metrics import recall_score\n",
+    "y_pred = df.model3\n",
+    "y_true = df.actual\n",
+    "recall_score(y_true, y_pred, average='macro'), recall_score(y_true, y_pred, average='micro'), recall_score(y_true, y_pred, average='weighted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      actual       0.36      0.51      0.42      1746\n",
+      "      model3       0.66      0.51      0.57      3254\n",
+      "\n",
+      "    accuracy                           0.51      5000\n",
+      "   macro avg       0.51      0.51      0.50      5000\n",
+      "weighted avg       0.55      0.51      0.52      5000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Model 3 Classification Report\n",
+    "\n",
+    "from sklearn.metrics import classification_report\n",
+    "y_pred = df.model3\n",
+    "y_true = df.actual\n",
+    "target_names = ['actual', 'model3']\n",
+    "print(classification_report(y_true, y_pred, target_names=target_names))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MODEL FOUR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   model accuracy: 74.26%\n",
+      "baseline accuracy: 65.08%\n"
+     ]
+    }
+   ],
+   "source": [
+    "#model 4\n",
+    "df.model4.value_counts()\n",
+    "\n",
+    "df['baseline_prediction'] = 'dog'\n",
+    "\n",
+    "model_accuracy = (df.model4 == df.actual).mean()\n",
+    "baseline_accuracy = (df.baseline_prediction == df.actual).mean()\n",
+    "\n",
+    "print(f'   model accuracy: {model_accuracy:.2%}')\n",
+    "print(f'baseline accuracy: {baseline_accuracy:.2%}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7426"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Model 4 Accuracy Score\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "y_pred = df.model4\n",
+    "y_true = df.actual\n",
+    "accuracy_score(y_true, y_pred)\n",
+    "\n",
+    "accuracy_score(y_true, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.7898980051430666, 0.8074, 0.8200959550792857)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Model 4 Precision Score\n",
+    "\n",
+    "from sklearn.metrics import precision_score\n",
+    "y_pred = df.model1\n",
+    "y_true = df.actual\n",
+    "# provides a range of values\n",
+    "precision_score(y_true, y_pred, average='macro'), precision_score(y_true, y_pred, average='micro'), precision_score(y_true, y_pred, average='weighted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.6505537989722403, 0.7426, 0.7426)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Model 4 Recall Score\n",
+    "\n",
+    "from sklearn.metrics import recall_score\n",
+    "y_pred = df.model4\n",
+    "y_true = df.actual\n",
+    "recall_score(y_true, y_pred, average='macro'), recall_score(y_true, y_pred, average='micro'), recall_score(y_true, y_pred, average='weighted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      actual       0.81      0.35      0.48      1746\n",
+      "      model4       0.73      0.96      0.83      3254\n",
+      "\n",
+      "    accuracy                           0.74      5000\n",
+      "   macro avg       0.77      0.65      0.66      5000\n",
+      "weighted avg       0.76      0.74      0.71      5000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Model 4 Classification Report\n",
+    "\n",
+    "from sklearn.metrics import classification_report\n",
+    "y_pred = df.model4\n",
+    "y_true = df.actual\n",
+    "target_names = ['actual', 'model4']\n",
+    "print(classification_report(y_true, y_pred, target_names=target_names))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### - Model #1 and #4 have better accuracies then the baseline model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- B. Suppose you are working on a team that solely deals with dog pictures. Which of these models would you recomend for Phase I? For Phase II?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### - Model # 1 is the most accurate at predicting 'dog'. If i worked on the dog team that is the model that I would want to move forward with."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- C. Suppose you are working on a team that solely deals with cat pictures. Which of these models would you recomend for Phase I? For Phase II?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### - Model # 3 is the least accurate at predicting 'dog'. If i worked on the cat team that is the model that I would want to move forward with."
+   ]
   },
   {
    "cell_type": "markdown",
