--- a/model_evaluation.ipynb
+++ b/model_evaluation.ipynb
@@ -322,6 +322,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1423,  323],\n",
+       "       [ 640, 2614]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Confusion Matrtix Model 1\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "y_true = df.actual\n",
+    "y_pred = df.model1\n",
+    "confusion_matrix(y_true, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- You could expect about 640 False Negatives with model 1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
