Import Error Bug

--- a/model.ipynb
+++ b/model.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,14 +21,17 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "import acquire\n",
-    "import prepare\n",
+    "\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "import seaborn as sns\n",
     "# ignore warnings\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "import acquire \n",
+    "import prepare "
    ]
   },
   {
@@ -42,158 +45,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cleaned Data for Exploration\n",
-    "df = acquire.get_titanic_data(cached = True)\n",
-    "train, validate, test = prepare.prep_titanic(df)"
+    "df = prepare.prep_titanic_data(acquire.get_titanic_data(cached = True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>survived</th>\n",
-       "      <th>pclass</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>age</th>\n",
-       "      <th>sibsp</th>\n",
-       "      <th>parch</th>\n",
-       "      <th>fare</th>\n",
-       "      <th>embark_town</th>\n",
-       "      <th>alone</th>\n",
-       "      <th>sex_male</th>\n",
-       "      <th>embark_town_Queenstown</th>\n",
-       "      <th>embark_town_Southampton</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>583</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>male</td>\n",
-       "      <td>36.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40.1250</td>\n",
-       "      <td>Cherbourg</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>337</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>female</td>\n",
-       "      <td>41.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>134.5000</td>\n",
-       "      <td>Cherbourg</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>male</td>\n",
-       "      <td>7.000000</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>39.6875</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>218</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>female</td>\n",
-       "      <td>32.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>76.2917</td>\n",
-       "      <td>Cherbourg</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>female</td>\n",
-       "      <td>29.916875</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>146.5208</td>\n",
-       "      <td>Cherbourg</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     survived  pclass     sex        age  sibsp  parch      fare  embark_town  \\\n",
-       "583         0       1    male  36.000000      0      0   40.1250    Cherbourg   \n",
-       "337         1       1  female  41.000000      0      0  134.5000    Cherbourg   \n",
-       "50          0       3    male   7.000000      4      1   39.6875  Southampton   \n",
-       "218         1       1  female  32.000000      0      0   76.2917    Cherbourg   \n",
-       "31          1       1  female  29.916875      1      0  146.5208    Cherbourg   \n",
-       "\n",
-       "     alone  sex_male  embark_town_Queenstown  embark_town_Southampton  \n",
-       "583      1         1                       0                        0  \n",
-       "337      1         0                       0                        0  \n",
-       "50       0         1                       0                        1  \n",
-       "218      1         0                       0                        0  \n",
-       "31       0         0                       0                        0  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'head'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-c42a15b2c7cf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'head'"
+     ]
     }
    ],
    "source": [
-    "train.head()"
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df[['pclass','age','fare','sibsp','parch']]\n",
+    "y = df[['survived']]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = .30, random_state = 123)\n",
+    "\n",
+    "X_train.head()"
    ]
   },
   {
